fixed flash message visibility and bug where user didnt actually join a room immediately after creating it

--- a/app/static/styles/chat_style.css
+++ b/app/static/styles/chat_style.css
@@ -14,6 +14,16 @@ body{
     border-radius: 10px;
 }
 
+.flashy {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 300px;
+    height: 100px;
+}​
+
 .wrapper {
     display: flex;
 }
